--- a/src/common/assets/styles/index.scss
+++ b/src/common/assets/styles/index.scss
@@ -5,6 +5,7 @@
 // Element Plus
 @import "./element-plus.css";
 @import "./element-plus.scss";
+@import "element-plus/dist/index.css";
 // 注册多主题
 @import "./theme/register.scss";
 // Mixins
